# vigilant-chainsaw

./: .flake8  .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: linters.yml  tests.yml  unittests.yml
bot/: __init__.py  color.py  cv_operations.py  farm.py  fishing.py  gui.py  resources.py  settings.py  state.py  templates.py
bot/farm/: __main__.py  farm.py
bot/fishing/: actions.py  cv_helpers.py  main.py
bot/harvesting/: actions.py  cv_helpers.py  main.py
tests/bot/: conftest.py  test_farm_bot.py  test_gui.py  test_select_farming_method.py
tests/bot/fishing/: conftest.py  test_looking_for_nibbles.py  test_lookup_hooking_game_area.py  test_search_bobber.py  test_search_bobber_in_game.py
tests/bot/fishing/actions/: test_hooking_the_fish_action.py
tests/bot/harvesting/: conftest.py  test_choice_cell_for_harvesting.py  test_search_resources.py
