[tool.poetry]
name = "vigilant-chainsaw"
version = "0.1.0"
description = ""
authors = ["Simon <spam@esemi.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.5.2"
mss = "^6.1.0"
numpy = "^1.20.3"
Pillow = "^8.2.0"
PyAutoGUI = "^0.9.52"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.0"
wemake-python-styleguide = "^0.15.2"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
farm = 'bot:farm_bot'
packages = [
    { include = "bot" },
]
